--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,39 @@
-/* You can add global styles to this file, and also import other style files */
+/* Basic styles */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Kumbh Sans", serif;
+}
+html,
+body,
+#root {
+  height: 100vh;
+  width: 100vw;
+}
+/* Global colors */
+:root {
+  /* Primary colors */
+  --color-primary-dark-cyan: hsl(185, 75%, 39%);
+  --color-primary-very-dark-desatured-blue: hsl(229, 23%, 23%);
+  --color-primary-dark-grayish-blue: hsl(227, 10%, 46%);
+  /* Neutral colors */
+  --color-neutral-dark-gray: hsl(0, 0%, 59%);
+  /* Typography */
+  --font-size: 18px;
+  --font-weight-1: 400;
+  --font-weight-2: 700;
+  /* Size Card */
+  --size-card-height: 370px;
+  --size-card-width: 320px;
+}
+
+@font-face {
+  font-family: "Kumbh Sans";
+  src: url("/assets/fonts/KumbhSans-VariableFont_wght.ttf");
+}
+
+/* 
+    Screen sizes
+    - Mobile: 375px
+    - Desktop: 1440px
+*/
